Fix ESLint errors and update styles

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #064dd9;
+  background-color: #92b5fa;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
