--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ body {
   height: 1.125rem;
   margin: 0 2.438rem 0 0;
   opacity: 0.5;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat';
   font-size: 0.875rem;
   font-weight: bold;
   font-stretch: normal;
@@ -114,9 +114,9 @@ body {
   width: 12.313rem;
   height: 1.813rem;
   margin: 0.188rem 20.188rem 0 0;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Roboto Slab';
   font-size: 1.375rem;
-  font-weight: bolder;
+  font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
