--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ body {
   height: 1.125rem;
   margin: 0 2.438rem 0 0;
   opacity: 0.5;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.875rem;
   font-weight: bold;
   font-stretch: normal;
@@ -114,7 +114,7 @@ body {
   width: 12.313rem;
   height: 1.813rem;
   margin: 0.188rem 20.188rem 0 0;
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', sans-serif;
   font-size: 1.175rem;
   font-weight: bold;
   font-stretch: normal;
